[gd_scene load_steps=24 format=3 uid="uid://berqu5o75bccl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_oojp3"]
[ext_resource type="Texture2D" uid="uid://bjsql0ncotbsu" path="res://assets/sprites/knight.png" id="3_s3120"]
[ext_resource type="AudioStream" uid="uid://wi6usqjdde2q" path="res://assets/sounds/player_damage.wav" id="5_xqce4"]
[ext_resource type="AudioStream" uid="uid://c0jjr80nr33k7" path="res://assets/sounds/player_death.wav" id="6_wrcxf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_op2wk"]
atlas = ExtResource("3_s3120")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0bne"]
atlas = ExtResource("3_s3120")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2tb7"]
atlas = ExtResource("3_s3120")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef0p4"]
atlas = ExtResource("3_s3120")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67htb"]
atlas = ExtResource("3_s3120")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opur8"]
atlas = ExtResource("3_s3120")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30ud1"]
atlas = ExtResource("3_s3120")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jvre"]
atlas = ExtResource("3_s3120")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1n8w"]
atlas = ExtResource("3_s3120")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpcjv"]
atlas = ExtResource("3_s3120")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewjg1"]
atlas = ExtResource("3_s3120")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlkop"]
atlas = ExtResource("3_s3120")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yn7cp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op2wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0bne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2tb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef0p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67htb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opur8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30ud1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jvre")
}],
"loop": false,
"name": &"Dodge",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1n8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpcjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewjg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlkop")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dsit"]
size = Vector2(10, 16)

[sub_resource type="Animation" id="Animation_21q1o"]
resource_name = "attack"
length = 0.40001

[sub_resource type="Animation" id="Animation_p7h50"]
resource_name = "idle"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_hrjlq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dodge"]
}

[sub_resource type="Animation" id="Animation_rakva"]
resource_name = "dodge"
length = 0.466673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dodge"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y40bx"]
_data = {
"RESET": SubResource("Animation_hrjlq"),
"attack": SubResource("Animation_21q1o"),
"dodge": SubResource("Animation_rakva"),
"idle": SubResource("Animation_p7h50")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_oojp3")

[node name="weapon_on_back_left" type="Sprite2D" parent="."]
position = Vector2(1.00002, -12)
rotation = 3.14159

[node name="weapon_on_back_right" type="Sprite2D" parent="."]
position = Vector2(2.00272e-05, -12)
rotation = 3.14159
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_yn7cp")
animation = &"Dodge"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_7dsit")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="timer_attack" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y40bx")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -8)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
speed_scale = 0.5
explosiveness = 0.8
direction = Vector2(0, -100)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
color = Color(0.957031, 0.018692, 0.106661, 1)

[node name="sound_player_damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xqce4")

[node name="sound_player_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wrcxf")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timer_attack" to="." method="_on_timer_attack_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
